# mcp

./: .env.example  .gitignore  DEVLOG.md  README.md  pyproject.toml
client/: mcp_client.py
examples/: create_dataset.md  create_dataset_template.md  create_model.md  create_model_run_workflow_template.md  create_organisation.md  create_person.md  registration.md
server/: provena_mcp_server.py
tests/: test_provena_mcp_server.py
